-
Bug
-
Resolution: Fixed
-
P1: Critical
-
5.12.2
-
-
717b95c7863278332ec4eb4dfbbfb6147a5ac9ed (qt/qtconnectivity/5.12)
When discovering characteristics with some devices it will crash when it times out. It will timeout and on macOS/iOS it crashes inside the timeout handler because the objectUnderWatch is nil. Additionally, if the crash is prevented it will not find any characteristics as a result. This happens with the lowenergyscanner example
| For Gerrit Dashboard: QTBUG-75043 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 258686,6 | CoreBluetooth: add a missing -peripheral:didModifyServices: method | 5.12 | qt/qtconnectivity | Status: MERGED | +2 | 0 |